--- a/packages/fluent/scss/tabstrip/_layout.scss
+++ b/packages/fluent/scss/tabstrip/_layout.scss
@@ -47,7 +47,8 @@
         outline: 0;
         display: flex;
         flex-flow: row wrap;
-        flex: 0 0 auto;
+        flex: 1 1 auto;
+        gap: $kendo-tabstrip-item-gap;
 
         *,
         *::before,
@@ -67,16 +68,11 @@
             justify-items: stretch;
             outline: 0;
 
-            &::before {
-                content: "";
-                border-style: solid;
-                border-color: var( --kendo-tabstrip-item-ripple-border, #{$kendo-tabstrip-item-ripple-border} );
-                display: block;
-                position: absolute;
-                z-index: 2;
-                opacity: 0;
-                transition: opacity .3s, transform .3s;
-                pointer-events: none;
+            // Active state
+            &:active,
+            &.k-active,
+            &.k-selected {
+                font-weight: var( --kendo-tabstrip-item-selected-font-weight, #{$kendo-tabstrip-item-selected-font-weight} );
             }
         }
 
@@ -97,12 +93,10 @@
             align-items: center;
         }
     }
-    .k-ie11 .k-tabstrip-items {
-        white-space: nowrap;
-    }
 
     .k-tabstrip-content,
     .k-tabstrip > .k-content {
+        margin: 0 !important; // sass-lint:disable-line no-important
         padding-inline: var( --kendo-tabstrip-content-padding-x, #{$kendo-tabstrip-content-padding-x} ) ;
         padding-block: var( --kendo-tabstrip-content-padding-y, #{$kendo-tabstrip-content-padding-y} ) ;
         box-sizing: border-box;
@@ -149,7 +143,6 @@
         > .k-tabstrip-items-wrapper {
 
             > .k-tabstrip-items {
-                flex: 1 1 auto;
                 flex-wrap: nowrap;
                 white-space: nowrap;
                 overflow: hidden;
@@ -187,36 +180,9 @@
     .k-tabstrip-top {
         > .k-tabstrip-items-wrapper {
             border-bottom-width: var( --kendo-tabstrip-border-width, #{$kendo-tabstrip-border-width} );
-            margin-block-end: calc( var( --kendo-tabstrip-content-border-width, #{$kendo-tabstrip-content-border-width} ) * -1 );
-
-            > .k-tabstrip-items {
-                width: 100%;
-            }
 
             .k-item {
                 margin-block-end: calc( var( --kendo-tabstrip-border-width, #{$kendo-tabstrip-border-width} ) * -1 );
-
-                &::before {
-                    width: 100%;
-                    border-width: 0 0 var( --kendo-tabstrip-item-ripple-border-width, #{$kendo-tabstrip-item-ripple-border-width} ) 0;
-                    inset-block-end: 0;
-                    transform: scaleX(0);
-                }
-
-                &:active,
-                &.k-active,
-                &.k-selected {
-                    font-weight: var( --kendo-tabstrip-item-selected-font-weight, #{$kendo-tabstrip-item-selected-font-weight} );
-
-                    &::before {
-                        opacity: 1;
-                        transform: scaleX(1);
-                    }
-                }
-            }
-
-            .k-item + .k-item {
-                margin-inline-start: var( --kendo-tabstrip-item-gap, #{$kendo-tabstrip-item-gap} );
             }
 
         }
@@ -224,38 +190,9 @@
     .k-tabstrip-bottom {
         > .k-tabstrip-items-wrapper {
             border-top-width: var( --kendo-tabstrip-border-width, #{$kendo-tabstrip-border-width} );
-            margin-block-start: calc( var( --kendo-tabstrip-content-border-width, #{$kendo-tabstrip-content-border-width} ) * -1 );
-
-            > .k-tabstrip-items {
-                width: 100%;
-            }
 
             .k-item {
                 margin-block-start: calc( var( --kendo-tabstrip-border-width, #{$kendo-tabstrip-border-width} ) * -1 );
-
-                &::before {
-                    width: 100%;
-                    border-width: var( --kendo-tabstrip-item-ripple-border-width, #{$kendo-tabstrip-item-ripple-border-width} ) 0 0 0;
-                    inset-block-start: 0;
-                    transform: scaleX(0);
-                }
-
-                &:active,
-                &.k-active,
-                &.k-selected {
-                    font-weight: var( --kendo-tabstrip-item-selected-font-weight, #{$kendo-tabstrip-item-selected-font-weight} );
-
-                    &::before {
-                        opacity: 1;
-                        transform: scaleX(1);
-                    }
-
-                }
-
-            }
-
-            .k-item + .k-item {
-                margin-inline-start: var( --kendo-tabstrip-item-gap, #{$kendo-tabstrip-item-gap} );
             }
 
         }
@@ -265,46 +202,14 @@
 
         > .k-tabstrip-items-wrapper {
             border-right-width: var( --kendo-tabstrip-border-width, #{$kendo-tabstrip-border-width} );
-            margin-inline-end: calc( var( --kendo-tabstrip-content-border-width, #{$kendo-tabstrip-content-border-width} ) * -1 );
 
             > .k-tabstrip-items {
-                height: 100%;
-                display: inline-flex;
                 flex-direction: column;
             }
 
             .k-item {
                 margin-inline-end: calc( var( --kendo-tabstrip-border-width, #{$kendo-tabstrip-border-width} ) * -1 );
-
-                &::before {
-                    height: 100%;
-                    border-width: 0 var( --kendo-tabstrip-item-ripple-border-width, #{$kendo-tabstrip-item-ripple-border-width} ) 0 0;
-                    inset-inline-end: 0;
-                    transform: scaleY(0);
-                }
-
-                &:active,
-                &.k-active,
-                &.k-selected {
-                    font-weight: var( --kendo-tabstrip-item-selected-font-weight, #{$kendo-tabstrip-item-selected-font-weight} );
-
-                    &::before {
-                        opacity: 1;
-                        transform: scaleY(1);
-                    }
-
-                }
-
             }
-
-            .k-item + .k-item {
-                margin-block-start: var( --kendo-tabstrip-item-gap, #{$kendo-tabstrip-item-gap} );
-            }
-        }
-
-        > .k-content,
-        > .k-tabstrip-content {
-            margin: 0 !important; // sass-lint:disable-line no-important
         }
 
     }
@@ -313,53 +218,14 @@
 
         > .k-tabstrip-items-wrapper {
             border-left-width: var( --kendo-tabstrip-border-width, #{$kendo-tabstrip-border-width} );
-            margin-inline-start: calc( var( --kendo-tabstrip-content-border-width, #{$kendo-tabstrip-content-border-width} ) * -1 );
 
             > .k-tabstrip-items {
-                height: 100%;
-                display: inline-flex;
                 flex-direction: column;
             }
 
             .k-item {
                 margin-inline-start: calc( var( --kendo-tabstrip-border-width, #{$kendo-tabstrip-border-width} ) * -1 );
-
-                &::before {
-                    height: 100%;
-                    border-width: 0 0 0 var( --kendo-tabstrip-item-ripple-border-width, #{$kendo-tabstrip-item-ripple-border-width} );
-                    inset-inline-start: 0;
-                    transform: scaleY(0);
-                }
-
-                &:active,
-                &.k-active,
-                &.k-selected {
-                    font-weight: var( --kendo-tabstrip-item-selected-font-weight, #{$kendo-tabstrip-item-selected-font-weight} );
-
-                    &::before {
-                        opacity: 1;
-                        transform: scaleY(1);
-                    }
-
-                }
-
             }
-
-            .k-item + .k-item {
-                margin-block-start: var( --kendo-tabstrip-item-gap, #{$kendo-tabstrip-item-gap} );
-            }
-        }
-
-        > .k-content,
-        > .k-tabstrip-content {
-            margin: 0 !important; // sass-lint:disable-line no-important
-        }
-    }
-
-    // Hide tabstrip ripple when dragging
-    .k-tabstrip-items-wrapper .k-item.k-tabstrip-dragging {
-        &::before {
-            display: none !important; // sass-lint:disable-line no-important
         }
     }
 
@@ -372,13 +238,17 @@
                 content: "";
                 border-width: 0;
                 border-style: solid;
-                display: none;
+                display: block;
                 position: absolute;
                 z-index: 0;
                 top: 0;
                 right: 0;
                 bottom: 0;
                 left: 0;
+                opacity: 0;
+                transform: scaleY(0);
+                pointer-events: none;
+                transition: opacity .3s, transform .3s;
 
                 // Variants
                 .k-tabstrip-top > & {
@@ -394,12 +264,22 @@
                     border-left-width: var( --kendo-tabstrip-indicator-size, #{$kendo-tabstrip-indicator-size} );
                 }
             }
-            .k-item.k-active::after {
-                display: block;
+            .k-item:active::after,
+            .k-item.k-active::after,
+            .k-item.k-selected::after {
+                opacity: 1;
+                transform: scaleY(1);
             }
 
             .k-item > .k-link {
                 z-index: 1;
+            }
+        }
+
+        // Hide tabstrip indicator when dragging
+        .k-tabstrip-items-wrapper .k-item.k-tabstrip-dragging {
+            &::after {
+                display: none !important; // sass-lint:disable-line no-important
             }
         }
 
