--- a/packages/core/scss/module-system/_components.scss
+++ b/packages/core/scss/module-system/_components.scss
@@ -1,4 +1,4 @@
-$components: (
+$kendo-components: (
     // Typography and utils
     "typography",
     "utils",
@@ -6,7 +6,6 @@ $components: (
     "draggable",
 
     // Generic content
-    "styling",
     "table",
     "icon",
     "chip",
@@ -25,7 +24,6 @@ $components: (
     "badge",
     "color-preview",
     "loader",
-    "loading",
     "skeleton",
     "tooltip",
 
@@ -42,7 +40,7 @@ $components: (
     "slider",
 
     // Form helpers
-    "forms",
+    "form",
     "validator",
     "floating-label",
 
@@ -57,19 +55,19 @@ $components: (
     "color-palette",
     "color-gradient",
     "color-editor",
-    "colorpicker",
+    "color-picker",
     "combobox",
-    "dateinput",
-    "datepicker",
-    "timepicker",
-    "datetimepicker",
-    "daterangepicker",
-    "dropdowngrid",
-    "dropdownlist",
-    "dropdowntree",
-    "maskedtextbox",
+    "date-input",
+    "date-picker",
+    "time-picker",
+    "date-time-picker",
+    "date-range-picker",
+    "dropdown-grid",
+    "dropdown-list",
+    "dropdown-tree",
+    "masked-textbox",
     "multiselect",
-    "numerictextbox",
+    "numeric-textbox",
     "rating",
     "searchbox",
     "switch",
@@ -89,7 +87,7 @@ $components: (
     "drawer",
     "notification",
     "popover",
-    "responsivepanel",
+    "responsive-panel",
     "window",
 
     // Navigation
@@ -103,10 +101,10 @@ $components: (
 
     // Layout & containers
     "card",
-    "expansion-panel",
+    "expander",
     "panelbar",
     "splitter",
-    "tilelayout",
+    "tile-layout",
 
     // Data management
     "grid",
@@ -115,12 +113,12 @@ $components: (
     "pivotgrid",
     "treelist",
     "filter",
-    "filemanager",
-    "taskboard",
+    "file-manager",
+    "task-board",
 
     // Editors
     "editor",
-    "imageeditor",
+    "image-editor",
 
     // Scheduling
     "gantt",
@@ -129,11 +127,11 @@ $components: (
     // Misc
     "adaptive",
     "chat",
-    "mediaplayer",
+    "media-player",
     "timeline",
     "pdf-viewer",
     "scroller",
-    "scrollview",
+    "scroll-view",
 
     // Dataviz
     "dataviz",
